api-management/2-access-control/manifests/complex-weather-api.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: access-control-apimanagement-complex-weather
  namespace: apps
  annotations:
    hub.traefik.io/api: access-control-apimanagement-complex-weather
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`api.access-control.apimanagement.docker.localhost`) && PathRegexp(`^/complex/weather(/([0-9]+|openapi.yaml))?$`)
    kind: Rule
    services:
    - name: weather-app
      port: 3000
