api-management/2-access-control/manifests/simple-admin-api.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: access-control-apimanagement-simple-admin
  namespace: admin
  annotations:
    hub.traefik.io/api: access-control-apimanagement-simple-admin
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`api.access-control.apimanagement.docker.localhost`) && PathPrefix(`/simple/admin`)
    kind: Rule
    services:
    - name: admin-app
      port: 3000
    middlewares:
      - name: stripprefix-admin
