api-management/2-access-control/manifests/simple-weather-api.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: access-control-apimanagement-simple-weather
  namespace: apps
  annotations:
    hub.traefik.io/api: access-control-apimanagement-simple-weather
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`api.access-control.apimanagement.docker.localhost`) && Path(`/simple/weather`)
    kind: Rule
    services:
    - name: weather-app
      port: 3000
